SERVER-22364 threadsafe errno printing, pidfile error fix

If the errno is set after a pidfile write failure, then it will get
printed, otherwise this will print "Unable to determine OS error".